--- a/app/src/main/res/layout/activity_show_matches.xml
+++ b/app/src/main/res/layout/activity_show_matches.xml
@@ -12,5 +12,8 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="8dp"
+        android:scrollbars="vertical"
+        android:background="@android:color/darker_gray"
         />
 </LinearLayout>
