--- a/app/src/main/res/layout/dialog_modify.xml
+++ b/app/src/main/res/layout/dialog_modify.xml
@@ -4,6 +4,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <Spinner
+        android:id="@+id/spinnerTeam"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/homeTeamName"
