commit firebase read from firebase and touch ups left

--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -39,6 +39,13 @@
             android:text="@string/login" />
 
         <Button
+            android:id="@+id/btnRegister"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="@string/register" />
+
+        <Button
             android:id="@+id/btnNoLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
